Fix hero image size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1534,4 +1534,4 @@ footer a:hover {
 }
 
 .post_image { text-align: center; }
-.post_image img { max-height: 250px; max-width: 745px; }
+.post_image img { max-height: 250px; max-width: 100%; }
